// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getStoreData Saga should dispatch the fetchStoreFailed if API returned error 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "https://devapi.hermo.my/app/store",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getStoreData Saga should dispatch the fetchStoreSuccess if the call is successful 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "https://devapi.hermo.my/app/store",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getTWOHData Saga should dispatch the fetchTWOHFailed if API returned error 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "https://devapi.hermo.my/app/home/feature-banner",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getTWOHData Saga should dispatch the fetchTWOHSuccess if the call is successful 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "https://devapi.hermo.my/app/home/feature-banner",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;
